--- a/client/index.html
+++ b/client/index.html
@@ -78,6 +78,7 @@
       <script src="app/app.constant.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/project/newProject/newProject.controller.js"></script>
       <script src="app/project/project.controller.js"></script>
       <script src="app/project/project.js"></script>
       <script src="app/account/login/login.controller.js"></script>
