added post addObjective

--- a/client/app/project/viewProject/viewProject.html
+++ b/client/app/project/viewProject/viewProject.html
@@ -6,6 +6,7 @@
 </header>
 
 <div class="container">
+
 	<div class="row">
 		<p>Project Name: {{project.name}}</p>
     <p>Description: {{project.description}}</p>
@@ -16,3 +17,4 @@
     <p>Country: {{project.address.country}}</p>
 
 	</div>
+</div>
