--- a/client/index.html
+++ b/client/index.html
@@ -79,6 +79,7 @@
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/project/newProject/newProject.controller.js"></script>
+      <script src="app/project/objectiveEditor/objectiveEditor.controller.js"></script>
       <script src="app/project/project.controller.js"></script>
       <script src="app/project/project.js"></script>
       <script src="app/account/login/login.controller.js"></script>
