--- a/client/app/project/viewProject/viewProject.html
+++ b/client/app/project/viewProject/viewProject.html
@@ -1,13 +1,13 @@
 <header class="hero-unit" id="banner">
 	<div class="container">
-		<h1>Viewing Project {{project.name}}</h1>
+		<h1>{{project.name}}</h1>
 		<p class="lead">{{project.description}}</p>
 	</div>
 </header>
 
 <div class="container">
 
-	<div class="row">
+	<div class=".col-xs-4">
 		<p>Project Name: {{project.name}}</p>
     <p>Description: {{project.description}}</p>
     <p>Summary: {{project.summary}}</p>
