--- a/client/index.html
+++ b/client/index.html
@@ -55,11 +55,17 @@
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-      <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/lodash/lodash.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
       <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+      <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+      <script src="bower_components/cloudinary-core/cloudinary-core.js"></script>
+      <script src="bower_components/cloudinary_ng/js/angular.cloudinary.js"></script>
+      <script src="bower_components/api-check/dist/api-check.js"></script>
+      <script src="bower_components/angular-formly/dist/formly.js"></script>
+      <script src="bower_components/angular-formly-templates-bootstrap/dist/angular-formly-templates-bootstrap.min.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -69,7 +75,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/project/viewProject/viewProject.controller.js"></script>
+      <script src="app/project/updateEditor/updateEditor.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
@@ -78,11 +84,13 @@
       <script src="app/app.constant.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/project/fileUpload/fileUpload.controller.js"></script>
       <script src="app/project/newProject/newProject.controller.js"></script>
       <script src="app/project/objectiveEditor/objectiveEditor.controller.js"></script>
       <script src="app/project/project.controller.js"></script>
       <script src="app/project/project.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="app/project/viewProject/viewProject.controller.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
