--- a/client/app/project/objectiveEditor/objectiveEditor.html
+++ b/client/app/project/objectiveEditor/objectiveEditor.html
@@ -1,24 +1,33 @@
 <header class="hero-unit" id="banner">
 	<div class="container">
 		<h1>Add a New Objective</h1>
-		<p class="lead">Add and remove projects.</p> msg={{message}}
+		<p class="lead">Add and remove projects.</p> 
 	</div>
 </header>
 
 <div class="container">
 	<div class="row">
-		<form class="project-form">
-			<div class="col-md-6">
 
-				<div class="form-group">
-					<label for="projectName">New objective</label>
-					<input type="text" class="form-control input-sm" placeholder="Add a new objective here." id="projectName" ng-model="obj.summary">
-				</div>
+		<formly-form model="vm.fields" fields="vm.objectiveFields">
+			<button type="submit" class="btn btn-default" ng-click="vm.submit(vm.fields)">Submit</button>
+		</formly-form>
 
-				<span class="input-group-btn">
-					<button type="submit" class="btn btn-primary" ng-click="addObjective(obj)">Add New</button>
-				</span>
-			</div>
-
-		</form>
+</div>
 	</div>
+
+	<script type="text/ng-template" id="datepicker.html">
+      <p class="input-group">
+        <input  type="text"
+                id="{{::id}}"
+                name="{{::id}}"
+                ng-model="model[options.key]"
+                class="form-control"
+                ng-click="datepicker.open($event)"
+                uib-datepicker-popup="{{to.datepickerOptions.format}}"
+                is-open="datepicker.opened"
+                datepicker-options="to.datepickerOptions" />
+        <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="datepicker.open($event)" ng-disabled="to.disabled"><i class="glyphicon glyphicon-calendar"></i></button>
+        </span>
+      </p>
+    </script>
