--- a/client/app/project/newProject/newProject.html
+++ b/client/app/project/newProject/newProject.html
@@ -1,7 +1,7 @@
 <header class="hero-unit" id="banner">
 	<div class="container">
 		<h1>Add a New Project</h1>
-		<p class="lead">Add and remove projects.</p> msg={{message}}
+		<p class="lead">Add and remove projects.</p> 
 	</div>
 </header>
 <div class="container">
