updated status update model

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,7 +1,10 @@
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>Engage</h1>
-    <p class="lead">Connecting people that do good work.</p>
+    <div class="col-sm-12">
+    <span><img src="../../assets/images/projectengage.svg" width="200px" height="200px" /></span>
+    <!-- <h1>Project Engage</h1> -->
+    <div class="lead" style="margin-left:10px;">Connecting people that do good work.</div>
+
   </div>
 </header>
 
