--- a/client/app/project/fileUpload/newFile.html
+++ b/client/app/project/fileUpload/newFile.html
@@ -4,7 +4,7 @@
        <h4>Upload on file select</h4>
 
       <button ngf-select="uploadFiles($files)" multiple
-              accept="image/*">Select Files</button>
+              accept="image/*" name="files" ngf-multiple="true">Select Files</button>
       <br>
       <br>Files:
       <ul>
